--- a/Java/Concurrent/Party 2/7、取消与关闭.md
+++ b/Java/Concurrent/Party 2/7、取消与关闭.md
@@ -13,6 +13,15 @@
     - [7.1.7 采用 newTaskFor 来封装非标准的取消](#717-采用-newtaskfor-来封装非标准的取消)
   - [7.2 停止基于线程的服务](#72-停止基于线程的服务)
     - [7.2.1 示例：日志服务](#721-示例日志服务)
+    - [7.2.2 关闭ExecutorService](#722-关闭executorservice)
+    - [7.2.3 “毒丸”对象](#723-毒丸对象)
+    - [7.2.4 只执行一次的服务](#724-只执行一次的服务)
+    - [7.2.5 shutdownNow的局限性](#725-shutdownnow的局限性)
+    - [7.3 处理非正常的线程终止](#73-处理非正常的线程终止)
+  - [7.4 JVM关闭](#74-jvm关闭)
+    - [7.4.1 关闭钩子](#741-关闭钩子)
+    - [7.4.2 守护线程](#742-守护线程)
+    - [7.4.3 终结器](#743-终结器)
 
 <!-- /code_chunk_output -->
 
@@ -366,7 +375,7 @@
     }
 }
  ```
-
+ 
 ### 7.2.2 关闭ExecutorService
 &emsp;&emsp;我们已经知道ExecutorService提供了两种关闭方法：使用shutdown正常关闭，以及使用shutdownNow强制关闭。在进行强制关闭时，shutdownNow首先关闭正在执行的任务，然后返回所有尚未启动的任务清单。
 &emsp;&emsp;则两种关闭的差别在于各自的安全性和响应性：强行关闭的速度更快，但风险也更大，因为任务很可能在执行到一半时被结束；而正常关闭虽然速度慢，但却更安全，因为ExecutorService会一直等到队列中的所有任务都执行完成后才关闭。在其他拥有线程的服务中也应该考虑提供类似的关闭方式以供选择。
@@ -470,4 +479,33 @@
     }
  ```
 &emsp;&emsp;异常处理器如何处理未捕获异常，取决于对服务质量的需求。最常见的响应方式是将一个错误信息以及相关的栈跟踪信息写入应用程序日志中。异常处理器还可以采取更直接的响应，例如尝试重新启动，关闭应用程序，或者执行其他修复或诊断等操作。
+> 在运行时间比较长的引用程序中，通常会为所有线程的捕获异常指定一个异常处理器，并且该处理器至少会将异常信息记录到日志中。
+
+&emsp;&emsp;要为线程池中的所有线程设置一个UncaughtExceptionHandler，需要为ThreadPoolExecutor的构造函数提供一个ThreadFactory。(与所有的线程操控一样，只有线程的所有者能够改变线程的UncaughtException)标准线程池允许当发生未捕获异常时结束线程，但由于使用一个try-finally代码块来接收通知，因此当线程结束时，将由新的线程来代替它。如果没有提供捕获异常处理器或者其他的故障通知机制，那么任务会悄悄失败，从而导致极大的混乱。如果你希望在任务由于发生而失败时获得通知，并且执行一些特定于任务的恢复操作，那么可以将任务封装在能够捕获异常的Runnable或Callable中，或者改写ThreadPoolExecutor的afterExecute方法。
+&emsp;&emsp;只有通过execute提交的任务，才能将它抛出的异常交给未捕获异常处理器，而通过submit提交的方法，无论是抛出的未检查异常还是已检查异常，都将被认为是任务返回状态的一部分。如果一个由submit提交的任务由于抛出了异常而结束，那么这个异常将被Future.get封装在ExecutionExcetpion中重新抛出。
+
+## 7.4 JVM关闭
+&emsp;&emsp;JVM既可以正常关闭，也可以强行关闭。正常关闭触发方式有很多中，包括：当最后一个“正常(非守护）”线程结束时，或者当调用System.exit时，或者通过其他特定于平台的方法关闭时(例如发送SIGINT信号或者键入Ctrl-C).虽然可以通过这些标准方法来正常关闭JVM，但也可以通过调用Runtime.halt或在操作系统中“杀死”JVM进程(例如发送SIGKILL)来强制关闭JVM。
+
+### 7.4.1 关闭钩子
+&emsp;&emsp;在正常关闭中，JVM首先调用所有已注册的关闭钩子(Shutdown Hook)。关闭钩子是指通过Runtime.addShutdownHook注册的但尚未开始的线程。JVM并不能保证关闭钩子的调用顺序。在关闭应用程序线程时，如果有(守护或非守护)线程仍然在运行，那么这些线程接下来将域关闭进程并发执行。当所有的关闭钩子都执行结束时，如果runFinalizersOnExit为true，那么JVM将运行终结器，然后再停止。JVM并不会停止或中断任何在关闭时仍然运行的引用程序线程。当JVM最终结束时，这些线程将被强行结束。如果关闭钩子或终结器没有执行完成，那么正常关闭进程“挂起”并且JVM必须被强行关闭。当被强行关闭时，只是关闭JVM，而不会运行关闭钩子。
+&emsp;&emsp;**关闭钩子应该是线程安全的：它们在访问共享数据时必须使用同步机制，并且小心地避免发生死锁，这与其他并发代码的要求相同**。而且，关闭钩子不应该对应用程序的状态(例如：其他服务是否已经关闭，或者所有的正常线程是否已经执行完成)或者JVM的关闭原因做出任何假设，因此在编写关闭钩子的代码必须考虑周全。最后，关闭钩子必须尽快推出，因为他们会延迟JVM的结束时间，而用户可能希望JVM能尽快终止。
+&emsp;&emsp;关闭钩子可以用于实现服务或引用程序的清理工作，例如删除临时文件，或者清除无法由操作系统自动清除的资源。
+&emsp;&emsp;**由于关闭钩子将并发执行，因此关闭钩子不应该依赖哪些可能被应用程序或其他关闭钩子关闭的服务**。实现这种功能的一种方式是对所有服务使用同一个关闭钩子(而不是每个服务使用一个不同的关闭钩子)，并且在改关闭钩子中执行一系列的关闭操作。这确保了关闭操作在单个线程中串行执行，从而避免了在关闭操作之间出现竞态条件或死锁等问题。无论是否使用关闭钩子，都可以使用这项技术，通过将各个关闭操作串行执行而不是并行执行，可以消除许多潜在的故障。当应用程序需要维护多个服务之间的显示依赖信息时，这样技术可以确保关闭操作按照正确的顺序执行。
+
+### 7.4.2 守护线程
+&emsp;&emsp;有时候，你希望创建一个线程来执行一些辅助操作，但又不希望这个线程阻碍JVM的关闭。在这种情况下就需要使用守护线程(Daemon Thread)。
+&emsp;&emsp;线程可分为两种：普通线程和守护线程。JVM启动时创建的所有线程中，除了主线程以外，其他的线程都是守护线程(例如垃圾回收器以及其他执行辅助工作的线程)。当创建一个新线程时，新线程将继承创建它的线程的守护状态，因此在默认情况下，主线程创建的所有线程都是普通线程。
+&emsp;&emsp;普通线程与守护线程之间的差异仅在于当线程退出时发生的操作。当一个线程退出时，JVM会检查其他正在运行的线程，如果这些线程都是守护线程，那么JVM会正常退出操作。当JVM停止时，所有仍然存在的守护线程都将被抛弃——既不会执行finally代码块，也不会执行回卷栈，而JVM只是直接退出。
+&emsp;&emsp;我们应尽可能少的使用守护线程——很少有操作能够在不进行清理的情况下被安全地抛弃。特别是，如果在守护线程中执行可能包含I/O操作的任务，那么将是一种危险的行为。守护线程最好用于执行“内部”任务，例如周期性地从内存的缓存中移除逾期的数据。
+>&emsp;&emsp;此外守护线程通常不能用来代替应用程序管理程序中各个服务的生命周期。
+
+### 7.4.3 终结器
+&emsp;&emsp;当不再需要内存资源时，可以通过垃圾回收器来回收它们，但对于其他一些资源文件，例如文件句柄或套接字句柄，当不再需要它们时，必须显式的交换给操作系统。为了实现这个功能，垃圾回收期对那些定义了finalize方法的对象会进行特殊处理：在回收释放它们后，调用它们的finalize方法，从而保证一些持久化的资源被释放。
+&emsp;&emsp;由于终结器可以在某个有JVM管理的线程中运行，因此终结器访问的任何状态都可能被多个线程访问，这样就必须对访问操作进行同步。终结器并不能保证它们将在何时运行甚至是否会运行，并且复杂的终结器通常还会在对象上产生巨大的性能开销。要编写正确的终结器是非常困难的。在大多数情况下，通过使用finally代码块和显式的close方法，能够比使用终结器更好的管理职员。唯一的例外情况在于：当需要管理对象，并且该对象持有的资源时通过本地(native)方法获得的。基于这些原因以及其他一些原因，我们要尽量避免编写或使用包含终结器的类(除非是平台库中的类)。
+> &emsp;&emsp;避免使用终结器。
+
+## 小结
+&emsp;&emsp;在任务、线程、服务以及应用程序等模块中的声明周期问题，可能会增加它们在设计和实时性的复杂性。Java并没有提供某种抢占式的机制来取消操作或者终结线程。相反，它提供了一种协作式的中断机制来实现取消操作，但这要依赖于如何构建取消操作的协议，以及能够是否遵循这些协议。通过FutureTask和Executor框架，可以帮助我们构建可取消的任务和服务。
+
 
