--- a/Java/Concurrent/Party 2/8、线程池的使用.md
+++ b/Java/Concurrent/Party 2/8、线程池的使用.md
@@ -23,3 +23,25 @@
 &emsp;&emsp;要想正确地设置线程池的大小，必须分析计算环境、资源预算和任务的特性。在部署的系统中有多少个CPU？多大的内存？任务是计算密集型、I/O密集型还是两者皆可？它们是否需要像JDBC连接这样的稀缺资源？如果需要执行不同类型的任务，并且它们之间的行为相差很大，那么应该考虑使用多个线程池，从而使每个线程池可以根据自身的工作负载来调整。
 &emsp;&emsp;对于计算密集型任务，在拥有N个处理器的系统上，当线程池大小为N+1时，通常能实现最优的利用率。（即使当计算密集型偶尔由于页缺失故障或者其他原因而暂停，这个“额外”的线程也能确保CPU的时钟周期不会被浪费。）
 &emsp;&emsp;对于包含I/O操作或者其他阻塞操作的任务，由于线程并不会一直执行，因此线程池的规模应该更大。要正确地设置线程池大小，你必须估算出任务的等待事件与计算事件的比值。这种估算不需要很精确，并且可以通过一些分析或监控工具来获得。你还可以通过另一种方法来调节线程池的大小：在某个准负载下，分别设置不同大小的线程池来运行应用程序，并观察CPU利用率的水平。
+
+## 8.3 配置ThreadPoolExecutor
+&emsp;&emsp;ThreadPoolExecutor 为一些Executor 提供了基本的实现，这些Executor 是由Executors中的 `newCachedTrheadPool`、`newFixedThreadPool`和`newScheduledThreadExecutor` 等工厂方法返回的。ThreadpoolExecutor是一个灵活、稳定的线程吃，允许进行各种定制。
+&emsp;&emsp;如果默认的执行策略不能满足需求，那么可以通过 ThreadPoolExecutor 的构造函数来实例化一个对象，并根据自己的需求来定制，并且可以参考Executors的源代码来了解默认配置下的执行策略。
+
+
+### 8.3.1 线程的创建与销毁
+&emsp;&emsp;线程池的基本大小(Core Pool Size)、最大大小(Maximum Pool Size)以及存活等因素共同负责线程的创建与销毁。基本大小也就是线程池的目标大小，即在没有任务执行时线程池的大小，并且只有在工作队列满了的情况下才会创建超出这个数量的线程。线程池的最大大小表示可同时活动的线程数量的上线。如果某个线程的空闲时间超过了存活时间，那么将被标记为可回收，并且当线程池的当前大小超过了基本大小时，这个线程将被终止。
+
+* newFixedThreadPool 工厂方法将线程池的基本代销和最大大小设置为参数中指定的值，而且创建的线程池不会超时。
+* newCachedThreadPool 工厂方法将线程池的最大大小设置为Integer.MAX_VALUE，而将基本大小设置为0，并将超时时间设置为1分钟。
+* 其他形式的线程池可以通过显示的ThreadPoolExecutor构造函数来构造。
+
+> * 在创建ThreadPoolExecutor初期，线程并不会立即启动，而是等到有任务提交是才会启动，除非调用prestartAllCoreThread。
+> * 开发人员有时候会将线程池基本大小设置为0，从而最终销毁工作线程以避免阻碍JVM的退出。然而如果在线程池中没有使用SynchronoousQueue作为其工作队列。根据我们上面所述，线程池的基本大小只有等到工作队列被填满后才会开始执行任务，如果基本大小为0，工作队列又有一定的容量，就会造成任务一直要等到队列满后才开始执行。在Java 6中，可以通过allCoreThreadTimeOut来使线程池中的所有线程超时。**对于一个大小有限的线程池并且在该线程池中包含一个工作队列，如果希望这个线程池在没有任务的情况下能销毁所有线程，那么可以启用这个特性并将基本大小设置为零**。
+
+### 8.3.2 管理队列任务
+&emsp;&emsp;在有限的线程池中会限制可并发执行的任务数量。（单线程的Executor是一种值得注意的特性：它们能确保不会有任务并发执行，因为它们通过线程封闭来实现线程安全性）
+&emsp;&emsp;在提交的任务的速率超过线程池的处理速率时，那么任然会耗尽资源。
+ThreadPoolExecutor允许提供一个BlockingQueue来保存等待执行的任务。基本的任务排队方法由3中：无界队列、有界队列和同步移交(Synchronous Handoof)。队列的选择与其他配置参数有关，例如线程池的大小等。
+&emsp;&emsp;newFixedThreadPool 和 newSingleThreadExecutor 在默认情况下使用一个无界的LinkedBlockingQueue。如果所有工作者线程都处于忙碌，那么任务将在队列中等候。如果任务持续快速地到达，并且超过了线程池处理它们的速度，那么队列将无限制地增加。
+&emsp;&emsp;一种更稳妥的资源管理策略时使用有界队列，例如ArrayBlockingQueue、有界的LinkedBlockingQueue、PriorityBlockingQueue。
