--- a/Java/Concurrent/Party 2/8、线程池的使用.md
+++ b/Java/Concurrent/Party 2/8、线程池的使用.md
@@ -3,7 +3,7 @@
 ## 8.1 在任务与执行策略之间的隐形耦合
 &emsp;&emsp;Executor框架可以将任务的提交与任务的执行策略解耦开来。就像许多对复杂过程的解耦操作那样，这样论断多少有些言过其实了。虽然Executor框架为制定和修改执行策略都提供了相当大的灵活性，但并非所有的任务都能适用所有的执行策略。有些类型的任务需要明确地指定执行器，包括：
 &emsp;&emsp;**依赖性任务**。大多数行为正确的任务都是独立的：它们不依赖于其他任务的执行时序、执行结果或其他效果。当线程池中执行独立的任务时，可以随意地改变线程池的大小和配置，这些修改只会对执行性能产生影响。然而，如果提交给线程池的任务需要依赖其他的任务，那么久隐含地给执行策略带来了约束，此时必须小心地维持这些执行策略以避免产生活跃性问题。
-&emsp;&emsp;**使用线程粉笔机制的任务**。与线程池相比，单线程的Executor能够对并发性做出更强的承若。。它们能够确保任务不会并发地执行，使你能够放宽代码对线程安全的要求。对象可以封闭在任务线程中，使得该线程中执行的任务在访问该对象时，不需要同步，即使这些资源不是线程安全的也没有问题。这种情形将在任务与执行策略之间形成隐式的耦合——任务要求其执行所在的Executor是单线程。如果将Executor从单线程环境改为线程池环境，那么将会失去线程安全性。
+&emsp;&emsp;**使用线程封闭机制的任务**。与线程池相比，单线程的Executor能够对并发性做出更强的承若。。它们能够确保任务不会并发地执行，使你能够放宽代码对线程安全的要求。对象可以封闭在任务线程中，使得该线程中执行的任务在访问该对象时，不需要同步，即使这些资源不是线程安全的也没有问题。这种情形将在任务与执行策略之间形成隐式的耦合——任务要求其执行所在的Executor是单线程。如果将Executor从单线程环境改为线程池环境，那么将会失去线程安全性。
 &emsp;&emsp;**对响应时间敏感的任务**。GUI应用程序对响应时间是敏感的：如果用户在点击按钮后需要很长延迟才能得到可见的反馈，那么他们会感到不满。如果将一个运行时间较长的任务提交到单线程的Executor中，或者将多个运行时间较长的任务提交到一个只包含少量线程的线程池中，那么将降低由该Executor管理的服务的响应性。
 &emsp;&emsp;**使用ThreadLocal的任务**。ThreadLocal使每个线程都可以拥有某个变量的一个私有“版本”。然而，只要条件允许，Executor可以自由的重用这些线程。在标准的Executor实现中，当执行需要较低时将回收空闲线程，而当需求增加时将添加新的线程，并且如果从任务中抛出一个未检查异常，那么将用一个新的工作者线程来替代抛出异常的线程。只有当线程本地值的声明周期受限于任务的声明周期时，在线程池中使用ThreadLocal才有意义，而在线程池的线程中不应该使用ThreadLocal在任务之间传递值。
 &emsp;&emsp;只有当任务都是同类型的并且相互独立时，线程池的性能才能达到最佳。如果将运行时间较长的与运行时间较短的任务混合在一起，那么除非线程池很大，否则将可能造成死锁。幸运的是，在基于网络的典型服务器应用程序中——网页服务器，邮件服务器以及文件服务器等，它们请求通常都是同类型的并且相关独立的。
